Ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
  - host: typingking.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: typingking-service
            port:
              number: 80
